Bug 311618, Crash [@ QDFlushPortBuffer].  Replumb the flush manager as an XPCOM service so that other components can cancel scheduled flushes when ports are going away.  Away goes trouble down the drain.  Camino/koko-widget only.  r=pink sr=smfr a/1.8=asa